@@ -38,8 +38,8 @@ bootRun {
     jvmArgs([
             '-Xms512m',
             '-Xmx512m',
-            '-XX:+UseZGC',
-            '-Xlog:gc*:file=./gc-zgc.log'
+            '-XX:+UseG1GC',
+            '-Xlog:gc*:file=./gc-g1.log'
     ])
 }
 
